KAFKAWRAP-58: refactor